# toil-and-trouble

./: .gitignore  CMakeLists.txt  parser.cpp  parser.h  toil-and-trouble.pro  toil-and-trouble_global.h  toilandtrouble.cpp  toilandtrouble.h
adjudicator/: abstractadjudicationcriterion.cpp  abstractadjudicationcriterion.h  parsingadjudicator.cpp  parsingadjudicator.h  preferredmorphemesequencecriterion.cpp  preferredmorphemesequencecriterion.h  preferredstemcriterion.cpp  preferredstemcriterion.h  preferredstemidcriterion.cpp  preferredstemidcriterion.h
